# introduction-to-data-pipelines-and-apache-airflow

./: README.md
airflow/: Dockerfile  README.md  docker-compose.yml
airflow/mnt/dags/: .airflowignore  data.json  day_3_dag.py  dog_api_pipeline.py  everyday_dag.py  output_information_schema.csv  play_with_airflow_connections_and_hooks.py  weather_api_dag.py  weather_data_2025-06-19T13:20:44.027514+00:00.json  weather_dbt_dag.py  week_1_dog_api_pipeline.py  week_2_day_3_dag.py  week_2_everyday_dag.py  week_2_play_with_airflow_connection_and_hooks_v2.py  week_2_play_with_airflow_connections_and_hooks.py  week_3_weather_api_dag.py  week_3_weather_api_dag_v2.py  week_4_weather_api_dag_test_fail.py
airflow/weather/: pyproject.toml
airflow/weather/weather/: dbt_project.yml
airflow/weather/weather/models/marts/: average_temperature_in_bangkok.sql
airflow/weather/weather/tests/: asset_temperaturee_not_greater_than_60.sql
airflow/weather/weather_project/: .user.yml  profiles.yml
airflow/weather/weather_project/models/example/: average_temperature_in_bangkok.sql
airflow/weather/weather_project/models/staging/: stg_weathers.sql
data_quality_workshop/: pyproject.toml
great_expectations_workshop/: check.py  data.csv  main.py  pyproject.toml  try_gx.py
my_first_project/: dogs.json  my_first_data_pipeline.py  pyproject.toml
play_with_data_quality/: main.py
week_1_my_first_project/: dogs.json  my_first_data_pipeline.py  pyproject.toml
