[tool.poetry]
name = "play-with-gx"
version = "0.1.0"
description = ""
authors = ["tew <154518680+Supitchaya-P@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
great-expectations = "0.18.9"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"