[project]
name = "week-1-my-first-project"
version = "0.1.0"
description = ""
authors = [
    {name = "tew",email = "154518680+Supitchaya-P@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
